firebase registration, login and inital display of profile

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_projectId= "aestimogram"
 VITE_storageBucket= "aestimogram.appspot.com"
 VITE_messagingSenderId= "823305862551"
 VITE_appId= "1:823305862551:web:3f1719cd359668346018d2"
+VITE_appURL="http://localhost:5173"
